# swift-bindgen

./: Cargo.toml
swift/: Cargo.toml
swift-bindgen/: Cargo.toml
swift-bindgen/src/: lib.rs
swift-demangle/: Cargo.toml  build.rs
swift-demangle/src/: demangle.swift  lib.rs
swift-rt/: Cargo.toml
swift-sys/: Cargo.toml
